--- a/home.html
+++ b/home.html
@@ -45,10 +45,7 @@
                                 <a class="nav-link" href="inspiration.html">Inspiration</a>
                             </li>
                             </ul>
-                            <form class="d-flex">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Search</button>
-                            </form>
+                            
                         </div>
                     </div>
                 </nav>
@@ -75,7 +72,7 @@
                     </p>
 
                     <div>
-                        <img src="res\Image.png" id="portrait">
+                        <img src="res\Image.png" id="portrait" alt="portrait image of Andrija">
                     </div>
                 </div>
 
@@ -100,7 +97,7 @@
 
                     <div class="box2">
                         <p>
-                            <img src="res\display.svg" height="20" width="30" alt="image of a computer screen"><b>Computer Technician</b> <i>(2018 - 2021) <br> <a href="https://www.novapromachining.com/" target="_blank">NovaPro Machining Inc</a> Calgary, AB</i>
+                            <img src="res\display.svg" height="20" width="30" alt="image of a computer screen"><b>Computer Technician</b> <i>(2018 - 2021) <br> <a href="https://www.novapromachining.com/" class="link" target="_blank">NovaPro Machining Inc</a> Calgary, AB</i>
                             <ul>
                                 <li>
                                     Experienced in windows-related computing and NAS systems.
@@ -150,7 +147,7 @@
 
                     
                     <div class="box2">
-                        <img src="res\phone.svg" height="20" width="30" alt="image of a computer screen"><b>Repair Technician</b> <i>(April 2021 - Sept 2021) <br> <a href="https://www.iphix.ca/" target="_blank">IPhix Telus Koodo Inc</a> Calgary, AB</i>
+                        <img src="res\phone.svg" height="20" width="30" alt="image of a computer screen"><b>Repair Technician</b> <i>(April 2021 - Sept 2021) <br> <a href="https://www.iphix.ca/" class="link" target="_blank">IPhix Telus Koodo Inc</a> Calgary, AB</i>
                         <p>
                             <ul>
                                 <li>
