--- a/home.html
+++ b/home.html
@@ -318,6 +318,18 @@
                                     <li>Aesthetic Experience and Ideas</li>
                                     <li>Writing in a Digital Context: Language, Media, Culture</li>
                                 </ul>
+
+                                <br>
+                                <hr>
+                                <br>
+
+                                <b>Accomplishments</b>
+                                <ul>
+                                    <li>Awarded the achievement of Dean's Honour-Roll - Fall 2021 </li>
+                                    <li>Awarded the achievement of Dean's Honour-Roll - Winter 2021 </li>
+                                    <li>Awarded the achievement of Presidents List for the year of 2021 </li>
+                                </ul>
+
                             </ul>
                             
                         </p>
