--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <!-- Standard Styling Sheets -->
         <link rel="stylesheet" href="style/general.css">
-        <link rel="stylesheet" href="style/home.css">
+        <link rel="stylesheet" href="style/index.css">
     </head>
 
     <body>
