--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
 
                 <div class="box" id="box1">
                     <h1 style="text-align: center;">Andrija Kolenda</h1>
-                    <p>
-                        <b> Objective: </b> Seeking opportunities to excel in the field of data and computer management skills and or customer service. Willing to learn and do anything and adapt to companies’ methods to be an asset to whom I work in any way.
+                    <p style="text-align: center;">
+                        <b> Objective: </b> Seeking opportunities to excel in the field of data and computer management skills and or customer service. Willing to learn and do anything and adapt to companies’ methods to be an asset to whom I work in any way. <br/>
+                        <b>Contact:</b> <a href="mailto:Andkolenda@hotmail.com">Andkolenda@hotmail.com</a>
                     </p>
 
                     <div>
