--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </p>
 
                     <div>
-                        <img src="res\Image.png" id="portrait" alt="portrait image of Andrija">
+                        <img src="res\Headshot.jpeg" id="portrait" alt="portrait image of Andrija">
                     </div>
                     
                 </div>
@@ -95,6 +95,61 @@
                     <hr><br>
 
                     <img src="res\tools.svg" height="65" width="65" alt="image of a screwdriver" id="headimg">
+
+
+                    <div class="box2">
+                        <p>
+                            <img src="res\computer.svg" height="20" width="30" alt="image of a desktop computer"><b>IT Service Desk (Internship)</b> <i>(Sept 2024 - Dec 2024) <br> <a href="https://www.hatch.com/" class="link" target="_blank">Hatch</a> Calgary, Alberta, Canada</i>
+                            <ul>
+
+                                <li>
+                                    Leveraged Zendesk for ticket management and prompt issue resolution.
+                                </li>
+                                <li>
+                                    Utilized LanSweeper to monitor hardware inventory and manage software deployments.
+                                </li>
+                                <li>
+                                    Administered Microsoft Entra ID (Azure AD) for identity and access management.
+                                </li>
+                                <li>
+                                    Managed and maintained Ricoh printers, ensuring optimal performance across the office.
+                                </li>
+                                <li>
+                                    Provided application support for Autodesk, ESRI, Bentley, OneDrive, Teams, SharePoint, SCCM, and Exchange.
+                                </li>
+                                <li>
+                                    Supported IT infrastructure for hybrid conferences with 980 attendees, offering technical assistance on-site.
+                                </li>
+                                <li>
+                                    Coordinated deployment, imaging, and configuration of PCs, optimizing system performance.
+                                </li>
+                                <li>
+                                    Assisted with technical setups for live streams internally for 500+ viewers, ensuring microphones, streams, and video playback functioned seamlessly on sophisticated setups.
+                                </li>
+                                <hr>
+                                <b>Technologies Used:</b>
+                                <ul>
+                                    <li>Zendesk</li>
+                                    <li>LanSweeper</li>
+                                    <li>Microsoft Entra ID (Azure AD)</li>
+                                    <li>Ricoh printers</li>
+                                    <li>Autodesk</li>
+                                    <li>ESRI</li>
+                                    <li>Bentley</li>
+                                    <li>OneDrive</li>
+                                    <li>Teams</li>
+                                    <li>SharePoint</li>
+                                    <li>SCCM</li>
+                                    <li>Exchange</li>
+                                    <li>Starlink</li>
+                                </ul>
+                            </ul>
+                        </p>
+                    </div>
+
+                    <br>
+                    <hr>
+                    <br>
 
 
                     <div class="box2">
