Update .gitignore and enhance CSS with new utility classes and properties

--- a/index.html
+++ b/index.html
@@ -297,6 +297,261 @@
           </div>
         </div>
       </section>
+
+      <!-- Projects Section -->
+      <section id="projects" class="py-12">
+        <h2 class="text-3xl font-bold gradient-text text-center mb-12">
+          Notable Projects
+        </h2>
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+          <!-- Movie Theatre Project -->
+          <div class="glass-card p-6 card-hover group">
+            <div class="relative overflow-hidden rounded-lg mb-4">
+              <div
+                class="absolute inset-0 bg-gradient-to-r from-blue-600 to-purple-600 opacity-75 group-hover:opacity-90 transition-opacity"
+              ></div>
+              <svg
+                class="w-16 h-16 text-white absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M7 4v16M17 4v16M3 8h18M3 16h18"
+                ></path>
+              </svg>
+            </div>
+            <h3 class="font-bold text-lg mb-2">Movie Theatre Tracker</h3>
+            <p class="text-gray-600 mb-4">
+              Full-stack application with Google Maps API integration and GCP
+              deployment
+            </p>
+            <div class="flex flex-wrap gap-2">
+              <span class="skill-tag">Google Maps API</span>
+              <span class="skill-tag">GCP</span>
+              <span class="skill-tag">LAMP Stack</span>
+              <span class="skill-tag">PHP</span>
+            </div>
+          </div>
+
+          <!-- Chemistry Inventory -->
+          <div class="glass-card p-6 card-hover group">
+            <div class="relative overflow-hidden rounded-lg mb-4">
+              <div
+                class="absolute inset-0 bg-gradient-to-r from-blue-600 to-purple-600 opacity-75 group-hover:opacity-90 transition-opacity"
+              ></div>
+              <svg
+                class="w-16 h-16 text-white absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z"
+                ></path>
+              </svg>
+            </div>
+            <h3 class="font-bold text-lg mb-2">
+              Chemistry Department Inventory
+            </h3>
+            <p class="text-gray-600 mb-4">
+              Mobile-responsive chemical tracking system for MRU
+            </p>
+            <div class="flex flex-wrap gap-2">
+              <span class="skill-tag">PHP</span>
+              <span class="skill-tag">JavaScript</span>
+              <span class="skill-tag">Tailwind</span>
+              <span class="skill-tag">Mobile-First</span>
+            </div>
+          </div>
+
+          <!-- Crypto Project -->
+          <div class="glass-card p-6 card-hover group">
+            <div class="relative overflow-hidden rounded-lg mb-4">
+              <div
+                class="absolute inset-0 bg-gradient-to-r from-blue-600 to-purple-600 opacity-75 group-hover:opacity-90 transition-opacity"
+              ></div>
+              <svg
+                class="w-16 h-16 text-white absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+                ></path>
+              </svg>
+            </div>
+            <h3 class="font-bold text-lg mb-2">Crypto Trading Platform</h3>
+            <p class="text-gray-600 mb-4">
+              Next.js application with Supabase integration
+            </p>
+            <div class="flex flex-wrap gap-2">
+              <span class="skill-tag">Next.js</span>
+              <span class="skill-tag">Supabase</span>
+              <span class="skill-tag">React</span>
+              <span class="skill-tag">Node.js</span>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Education Section -->
+      <section class="py-12">
+        <h2 class="text-3xl font-bold gradient-text text-center mb-12">
+          Education
+        </h2>
+        <div class="glass-card p-8 card-hover">
+          <div class="flex items-center mb-6">
+            <svg
+              class="w-12 h-12 text-blue-600"
+              fill="none"
+              stroke="currentColor"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M12 14l9-5-9-5-9 5 9 5z"
+              />
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M12 14l9-5-9-5-9 5 9 5zm0 0L3 9m9 5v6.5m0-6.5l9-5"
+              />
+            </svg>
+            <div class="ml-4">
+              <h3 class="text-2xl font-bold">
+                Bachelor of Computer Information Systems
+              </h3>
+              <p class="text-lg text-gray-600">Minor in Finance</p>
+            </div>
+            <div class="ml-auto text-right">
+              <p class="text-lg font-semibold">Mount Royal University</p>
+              <p class="text-gray-600">2021 - 2026</p>
+              <p class="text-blue-600 font-semibold">GPA: 3.89</p>
+            </div>
+          </div>
+          <div class="bg-blue-50 rounded-lg p-4">
+            <h4 class="font-semibold mb-2">Academic Achievements</h4>
+            <p class="text-gray-700">
+              Dean's Honor Roll - Fall 2021, Winter 2021, Fall 2022, Fall 2023,
+              Winter 2024
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Interests Section -->
+      <section class="py-12">
+        <h2 class="text-3xl font-bold gradient-text text-center mb-12">
+          Interests & Activities
+        </h2>
+        <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
+          <div class="glass-card p-6 card-hover text-center">
+            <div
+              class="w-16 h-16 mx-auto mb-4 bg-blue-100 rounded-full flex items-center justify-center"
+            >
+              <svg
+                class="w-8 h-8 text-blue-600"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2"
+                />
+              </svg>
+            </div>
+            <h3 class="font-semibold mb-2">LeetCode</h3>
+            <p class="text-gray-600">
+              Active practice to enhance technical knowledge
+            </p>
+          </div>
+
+          <div class="glass-card p-6 card-hover text-center">
+            <div
+              class="w-16 h-16 mx-auto mb-4 bg-blue-100 rounded-full flex items-center justify-center"
+            >
+              <svg
+                class="w-8 h-8 text-blue-600"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"
+                />
+              </svg>
+            </div>
+            <h3 class="font-semibold mb-2">Financial Literacy</h3>
+            <p class="text-gray-600">
+              Stock market analysis and personal investing
+            </p>
+          </div>
+
+          <div class="glass-card p-6 card-hover text-center">
+            <div
+              class="w-16 h-16 mx-auto mb-4 bg-blue-100 rounded-full flex items-center justify-center"
+            >
+              <svg
+                class="w-8 h-8 text-blue-600"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M5 12h14M5 12a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v4a2 2 0 01-2 2M5 12a2 2 0 00-2 2v4a2 2 0 002 2h14a2 2 0 002-2v-4a2 2 0 00-2-2m-2-4h.01M17 16h.01"
+                />
+              </svg>
+            </div>
+            <h3 class="font-semibold mb-2">Raspberry Pi</h3>
+            <p class="text-gray-600">Immich, Docker, Pi-hole DNS resolver</p>
+          </div>
+
+          <div class="glass-card p-6 card-hover text-center">
+            <div
+              class="w-16 h-16 mx-auto mb-4 bg-blue-100 rounded-full flex items-center justify-center"
+            >
+              <svg
+                class="w-8 h-8 text-blue-600"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"
+                />
+              </svg>
+            </div>
+            <h3 class="font-semibold mb-2">Privacy & Security</h3>
+            <p class="text-gray-600">PIPEDA, CASL and Privacy Act Knowledge</p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer
