--- a/index.html
+++ b/index.html
@@ -45,16 +45,36 @@
     </nav>
 
     <main class="pt-16 container mx-auto px-4 max-w-7xl">
-      <section id="about" class="hero-gradient rounded-3xl py-20 mb-12">
-        <div class="flex flex-col items-center">
-          <div class="relative">
+      <section
+        id="about"
+        class="hero-gradient rounded-3xl py-20 mb-12 relative overflow-hidden"
+      >
+        <!-- Add animated background shapes -->
+        <div class="absolute inset-0 overflow-hidden">
+          <div
+            class="absolute -inset-[20px] bg-gradient-to-r from-blue-500/20 to-purple-500/20 blur-3xl animate-pulse"
+          ></div>
+          <div
+            class="absolute top-0 left-0 w-72 h-72 bg-blue-500/10 rounded-full mix-blend-multiply filter blur-xl animate-blob"
+          ></div>
+          <div
+            class="absolute top-0 right-0 w-72 h-72 bg-purple-500/10 rounded-full mix-blend-multiply filter blur-xl animate-blob animation-delay-2000"
+          ></div>
+          <div
+            class="absolute -bottom-8 left-20 w-72 h-72 bg-pink-500/10 rounded-full mix-blend-multiply filter blur-xl animate-blob animation-delay-4000"
+          ></div>
+        </div>
+
+        <!-- Enhanced hero content -->
+        <div class="flex flex-col items-center relative z-10">
+          <div class="relative group">
             <div
-              class="absolute -inset-1 bg-gradient-to-r from-purple-600 to-blue-600 rounded-full blur opacity-75 animate-pulse"
+              class="absolute -inset-0.5 bg-gradient-to-r from-pink-600 to-purple-600 rounded-full blur opacity-75 group-hover:opacity-100 transition duration-1000 group-hover:duration-200 animate-tilt"
             ></div>
             <img
               src="./res/Headshot.jpeg"
               alt="Andrija Kolenda"
-              class="relative w-48 h-48 rounded-full object-cover animate-float"
+              class="relative w-48 h-48 rounded-full object-cover animate-float group-hover:scale-105 transition duration-300"
             />
           </div>
           <h1 class="text-5xl font-bold text-white mt-8 mb-4">
@@ -74,12 +94,58 @@
         </div>
       </section>
 
+      <!-- Add these styles to the skill cards -->
+      <style>
+        .animate-blob {
+          animation: blob 7s infinite;
+        }
+        .animation-delay-2000 {
+          animation-delay: 2s;
+        }
+        .animation-delay-4000 {
+          animation-delay: 4s;
+        }
+        @keyframes blob {
+          0% {
+            transform: translate(0px, 0px) scale(1);
+          }
+          33% {
+            transform: translate(30px, -50px) scale(1.1);
+          }
+          66% {
+            transform: translate(-20px, 20px) scale(0.9);
+          }
+          100% {
+            transform: translate(0px, 0px) scale(1);
+          }
+        }
+        @keyframes tilt {
+          0%,
+          50%,
+          100% {
+            transform: rotate(0deg);
+          }
+          25% {
+            transform: rotate(2deg);
+          }
+          75% {
+            transform: rotate(-2deg);
+          }
+        }
+        .animate-tilt {
+          animation: tilt 10s infinite linear;
+        }
+      </style>
+
+      <!-- Update skill cards with 3D hover effect -->
       <section id="skills" class="py-12">
         <h2 class="text-3xl font-bold gradient-text text-center mb-12">
           Core Qualifications
         </h2>
-        <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
-          <div class="glass-card p-6 card-hover">
+        <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 perspective-1000">
+          <div
+            class="glass-card p-6 card-hover transform-style-3d hover:transform-rotateY-10 transition-transform duration-300"
+          >
             <div class="flex items-center mb-4">
               <svg
                 class="w-8 h-8 text-blue-600"
@@ -107,7 +173,9 @@
             </div>
           </div>
 
-          <div class="glass-card p-6 card-hover">
+          <div
+            class="glass-card p-6 card-hover transform-style-3d hover:transform-rotateY-10 transition-transform duration-300"
+          >
             <div class="flex items-center mb-4">
               <svg
                 class="w-8 h-8 text-blue-600"
@@ -138,7 +206,9 @@
             </div>
           </div>
 
-          <div class="glass-card p-6 card-hover">
+          <div
+            class="glass-card p-6 card-hover transform-style-3d hover:transform-rotateY-10 transition-transform duration-300"
+          >
             <div class="flex items-center mb-4">
               <svg
                 class="w-8 h-8 text-blue-600"
@@ -167,7 +237,9 @@
             </div>
           </div>
 
-          <div class="glass-card p-6 card-hover">
+          <div
+            class="glass-card p-6 card-hover transform-style-3d hover:transform-rotateY-10 transition-transform duration-300"
+          >
             <div class="flex items-center mb-4">
               <svg
                 class="w-8 h-8 text-blue-600"
@@ -203,7 +275,13 @@
         </div>
       </section>
 
-      <section id="experience" class="py-12">
+      <!-- Add parallax scrolling to experience timeline -->
+      <section id="experience" class="py-12 relative">
+        <div class="absolute left-0 top-0 w-full h-full" data-parallax="0.2">
+          <div
+            class="absolute inset-0 bg-gradient-to-b from-blue-50/50 to-purple-50/50 blur-3xl"
+          ></div>
+        </div>
         <h2 class="text-3xl font-bold gradient-text text-center mb-12">
           Work Experience
         </h2>
@@ -568,6 +646,16 @@
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
       particlesJS.load("particles-js", "./particles-config.json");
+    </script>
+    <script>
+      document.addEventListener("scroll", () => {
+        const parallaxElements = document.querySelectorAll("[data-parallax]");
+        parallaxElements.forEach((element) => {
+          const speed = element.getAttribute("data-parallax");
+          const offset = window.pageYOffset * speed;
+          element.style.transform = `translateY(${offset}px)`;
+        });
+      });
     </script>
   </body>
 </html>
